--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="128x128" href="./assets/logo/logo_128_128.png">
     <link rel="icon" type="image/png" sizes="64x64" href="./assets/logo/logo_64_64.png" media="(prefers-color-scheme: light)">
     <link rel="icon" type="image/png" sizes="64x64" href="./assets/logo/logo_64_64.png" media="(prefers-color-scheme: dark)">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>jsPsych Experiment &copy; Mupsy</title>
   </head>
   <body>
